--- a/style.css
+++ b/style.css
@@ -2,10 +2,42 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    height: 20%;
+    padding: 50px;
 }
 
 body {
     background-image: url(images/markus-spiske-yXQJwO-wT1E-unsplash.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+h1 {
+
+}
+
+.home_pizza {
+  height: 700px;
+  width: auto;
+  border-style: solid;
+  border-color: hsl(205, 79%, 81%);
+  border-width: 10px;
+  transform: rotate(270deg);
+  margin: -50px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.navcustom {
+  width: 600px;
+  display: flex;
+  justify-content: space-around;
 }
