--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
+a:hover {
+    text-decoration: none;
+    color: inherit;
+   }
+
+
 header {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 20%;
     padding: 50px;
+    font-family: 'Mansalva', cursive;
+    color: white;
 }
 
 body {
@@ -12,7 +20,7 @@ body {
     background-repeat: no-repeat;
 }
 
-a {
+header a {
   color: inherit;
   text-decoration: none;
 }
@@ -24,7 +32,8 @@ h1 {
 .home_pizza {
   height: 700px;
   width: auto;
-  border-style: solid;
+  border: 10px solid transparent;
+  border-opacity: 0.7;
   border-color: hsl(205, 79%, 81%);
   border-width: 10px;
   transform: rotate(270deg);
