--- a/recipe-style.css
+++ b/recipe-style.css
@@ -32,6 +32,14 @@ h3 {
   color: white;
 }
 
+.photo_credits {
+  width: 200px;
+  margin: 0 auto auto;
+}
+
+p.credits {
+  font-size: 12px;
+}
 
 p {
   font-size: 30px;
@@ -110,16 +118,6 @@ section {
   width: 800px;
 }
 
-.column2 {
-  width: 800px;
-}
-
-.column3 {
-  width: 800px;
-}
-
-
-
 .navcustom {
   width: 600px;
   display: flex;
@@ -129,9 +127,9 @@ section {
 footer {
 height: 200px;
 display: flex;
-justify-content: flex-end;
+flex-direction: column;
+align-items: flex-end;
 padding: 150px 50px 50px 50px;
-align-items: center;
 width: 100%;
 font-family: 'Mansalva', cursive;
 color: white;
