--- a/style.css
+++ b/style.css
@@ -1,7 +1,37 @@
+body, html {
+  height: 100vh;
+}
+
 body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
     background-image: url(images/markus-spiske-yXQJwO-wT1E-unsplash.jpg);
     background-size: 100%;
-    background-repeat: no-repeat;
+}
+
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    padding: 50px;
+    font-family: 'Mansalva', cursive;
+    color: white;
+    position: fixed;
+    z-index: 1;
+
+}
+
+p {
+  font-size: 30px;
+  color: white;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
 }
 
 a:hover {
@@ -9,20 +39,9 @@ a:hover {
     color: inherit;
    }
 
-
-header {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 200px;
-    padding: 50px;
-    font-family: 'Mansalva', cursive;
-    color: white;
-
-}
-
 button {
   font-size: 30px;
+  margin: 30px;;
 }
 
 
@@ -36,24 +55,59 @@ h1 {
 
 }
 
+.gap {
+  height: 100px;
+  width: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+
+}
+
+article {
+  display: flex;
+  justify-content: space-between;
+}
+
+section {
+  display: flex;
+}
+
 .home_pizza {
-  height: 700px;
+  height: 800px;
   width: auto;
   border: 10px solid transparent;
-  border-opacity: 0.7;
   border-color: hsl(205, 79%, 81%);
   border-width: 10px;
   transform: rotate(270deg);
-  margin: -50px;
 }
 
 .container {
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .navcustom {
   width: 600px;
   display: flex;
   justify-content: space-around;
+}
+
+footer {
+
+}
+
+@media only screen and (max-width: 768px) {
+  .home_pizza {
+    height: 500px;
+    width: auto;
+    border: 10px solid transparent;
+    border-color: hsl(205, 79%, 81%);
+    border-width: 10px;
+    transform: rotate(270deg);
+    margin: 100px;
+  }
 }
